# vido

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  com.github.bernardodsanderson.vido.yml  main.vala  meson.build
.github/workflows/: main.yml
data/: AppData.xml  com.github.bernardodsanderson.vido.appdata.xml  com.github.bernardodsanderson.vido.appdata.xml.in  com.github.bernardodsanderson.vido.desktop  com.github.bernardodsanderson.vido.desktop.in  com.github.bernardodsanderson.vido.gresource.xml  com.github.bernardodsanderson.vido.gschema.xml  com.github.bernardodsanderson.vido.yml
debian/: changelog  control  copyright
po/: LINGUAS  POTFILES  com.github.bernardodsanderson.vido.pot  es.po  fr.po  id.po  it.po  ja.po  lt.po  nl.po  ru.po  tr.po  ua.mo  ua.po
po/extra/: LINGUAS  POTFILES  es.po  extra.pot  fr.po  id.po  it.po  ja.po  lt.po  nl.po  ru.po  ua.mo  ua.po
src/: Application.vala  MainWindow.vala  config.vala  config.vala.cmake  style.css  vido.vala
